hphp/hack/test/typecheck/reactive/unsafe/references_in_unsafe_rx1.php.exp
File "references_in_unsafe_rx1.php", line 3, characters 16-16:
Encountered unexpected token '&'. (Parsing[1002])
