hphp/hack/test/typecheck/reactive/unsafe/references_in_unsafe_rx1.php
<?hh // partial

function f(int &$a): void {
}
